fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -767,7 +767,7 @@ p {
       }
 
       >div {
-        margin: 5rem 0;
+        margin: 3rem 0;
       }
     }
   }
